Modified all boxing methods to use java.lang.{P...
Modified all boxing methods to use java.lang.{Primitive}.valueOf
instead of instantiating a new object.  Removed scala's boxing
cache since all boxing now goes through the JVM's cache.